<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="800dp"
    android:layout_height="600dp"
    android:layout_weight="1"
    android:background="@color/half_transparent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <TextView
        style="@style/dialog_title_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tools_dialog_log_header" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/logmanager_dialog_palycbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tools_dialog_log_playlog" />
"

        <CheckBox
            android:id="@+id/logmanager_dialog_systemcbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tools_dialog_log_commonlog" />
"
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/logmanager_dialog_closebtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/close" />
"
    </LinearLayout>

</LinearLayout>