<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >
    
    <RadioGroup  
        android:id="@+id/multicast_group"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:gravity="center"
        android:orientation="horizontal">  
        <RadioButton  
            android:id="@+id/multicast_group_leader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_black"
            android:text="@string/multicast_group_leader" />  
        <RadioButton  
            android:id="@+id/multicast_group_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_black"
            android:text="@string/multicast_group_member" />  
        <RadioButton  
            android:id="@+id/multicast_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_black"
            android:text="@string/multicast_close" />  
    </RadioGroup> 
    <TableLayout 
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:gravity="center"
        android:orientation="vertical">
        <TableRow 
            android:id="@+id/multicast_ip_address_row"
            android:layout_width="wrap_content"  
        	android:layout_height="wrap_content"  >
            <TextView
                android:id="@+id/multicast_ip_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multicast_ip_address"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/multicast_ip_address_context"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow 
            android:layout_width="wrap_content"  
        	android:layout_height="wrap_content"  
            android:id="@+id/multicast_local_port_row">
            <TextView
                android:id="@+id/multicast_local_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multicast_local_port"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/multicast_local_port_context"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"/>
        </TableRow>
        <TableRow 
             android:layout_width="wrap_content"  
       		 android:layout_height="wrap_content"  
           	 android:id="@+id/multicast_port_row">
            <TextView
                android:id="@+id/multicast_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multicast_port"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/multicast_port_context"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
